--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   path: ^1.6.2
   path_provider: ^2.0.11
   sqflite: ^2.2.2
+  location: ^4.4.0
+  google_maps_flutter: ^2.2.2
+  http: ^0.13.5
 
 
   # The following adds the Cupertino Icons font to your application.
